--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "phpunit/phpunit-selenium": "^4.1",
         "phpunit/phpunit": "^6.5",
         "squizlabs/php_codesniffer": "^3.2",
-        "friendsofphp/php-cs-fixer": "^2.11"
+        "friendsofphp/php-cs-fixer": "^2.11",
+        "doctrine/doctrine-fixtures-bundle": "^3.0"
     }
 }
