Alteração no gitignore e alteração do driver para postgree
retirada do arquivo config.ini para a subida da aplicação no heroku

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [development]
-db.driver       = pdo_mysql
+db.driver       = pgsql
 db.name       	= social
 db.host         = localhost
 db.port         = 3306
