Alteração do driver name

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [development]
-db.driver       = pgsql
+db.driver       = postgresql
 db.name       	= social
 db.host         = localhost
 db.port         = 3306
