Alteração do driver name compativel com o Doctrine

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [development]
-db.driver       = postgresql
+db.driver       = pdo_pgsql
 db.name       	= social
 db.host         = localhost
 db.port         = 3306
