--- a/config.ini
+++ b/config.ini
@@ -1,19 +1,19 @@
 [development]
-db.driver       = pdo_pgsql
-db.name       	= social
-db.host         = localhost
-db.port         = 3306
-db.user         = root
-db.password     = root
-log.enabled		= true
-mail.enabled	= false
-mail.host       = smtp.site.com
-mail.port       = 587
-mail.username   = email@site.com
-mail.password 	= passwordEmail
-mail.encryption = null
-mail.auth_mode  = null
-path.css	    = /css
-path.img	    = /img
-path.js		    = /js
-path.file		= /file
+db_driver       = pdo_pgsql
+db_name       	= social
+db_host         = localhost
+db_port         = 3306
+db_user         = root
+db_password     = root
+log_enabled		= true
+mail_enabled	= false
+mail_host       = smtp.site.com
+mail_port       = 587
+mail_username   = email@site.com
+mail_password 	= passwordEmail
+mail_encryption = null
+mail_auth_mode  = null
+path_css	    = /css
+path_img	    = /img
+path_js		    = /js
+path_file		= /file
