Inclusao do numero de registro no cadastro de voluntarios e da profissao no usuario. Novos testes em todas as funcionalidades. Ainda sem login

--- a/config-SAMPLE.ini
+++ b/config-SAMPLE.ini
@@ -17,6 +17,7 @@ path.css	    = /css
 path.img	    = /img
 path.js		    = /js
 path.file		= /file
+sec.salt		= 'chave-secreta-producao'
 
 [development]
 db.driver       = pdo_mysql
@@ -37,3 +38,4 @@ path.css	    = /css
 path.img	    = /img
 path.js		    = /js
 path.file		= /file
+sec.salt		= 'chave-secreta-desenvolvimento'
