--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ db.host         = localhost
 db.port         = 3306
 db.user         = root
 db.password     = root
-log.enabled		= true
+log.enabled		= false
 mail.enabled	= false
 mail.host       = smtp.site.com
 mail.port       = 587
