Inclusao do usuario logado em todos os formularios e a gravacao em todos os metodos de persistencia nos campos de auditoria

--- a/config.ini
+++ b/config.ini
@@ -6,15 +6,36 @@ db.port         = 3306
 db.user         = root
 db.password     = root
 log.enabled		= false
-mail.enabled	= false
-mail.host       = smtp.site.com
+mail.enabled	= true
+mail.host       = smtp.gmail.com
 mail.port       = 587
-mail.username   = email@site.com
-mail.password 	= passwordEmail
-mail.encryption = null
+mail.username   = jp.trabalho@gmail.com
+mail.password 	= Bmx1troa
+mail.encryption = ssl
 mail.auth_mode  = null
 path.css	    = /css
 path.img	    = /img
 path.js		    = /js
 path.file		= /file
 sec.salt		= 'chave-secreta-PNSLSocial'
+
+[production]
+db.driver       = pdo_mysql
+db.name       	= csjose
+db.host         = mysql.casasaojose.net.br
+db.port         = 3306
+db.user         = csjose
+db.password     = csjose@123
+log.enabled		= false
+mail.enabled	= true
+mail.host       = mail.casasaojose.net.br
+mail.port       = 465
+mail.username   = contato@casasaojose.net.br
+mail.password 	= contato@123
+mail.encryption = tls
+mail.auth_mode  = null
+path.css	    = /css
+path.img	    = /img
+path.js		    = /js
+path.file		= /file
+sec.salt		= 'bendita sois vós entre as mulheres e bendito é o fruto do vosso ventre'
